--- a/src/ApiGateways/Web/Web.ApiGateway/Web.ApiGateway.csproj
+++ b/src/ApiGateways/Web/Web.ApiGateway/Web.ApiGateway.csproj
@@ -13,6 +13,7 @@
     <PackageReference Include="MMLib.SwaggerForOcelot" Version="4.4.1" />
     <PackageReference Include="Ocelot" Version="17.0.0" />
     <PackageReference Include="Serilog.AspNetCore" Version="4.1.0" />
+    <PackageReference Include="Serilog.Enrichers.Environment" Version="2.1.3" />
     <PackageReference Include="Serilog.Settings.Configuration" Version="3.1.0" />
     <PackageReference Include="Serilog.Sinks.Console" Version="3.1.1" />
   </ItemGroup>
