Add EF core support for postgres and sqls, Add logging to startup.cs

--- a/src/Services/User/appsettings.Development.json
+++ b/src/Services/User/appsettings.Development.json
@@ -6,7 +6,10 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "MessageBrokerSettings": {
-    "Url": "amqp://guest:guest@rabbitmq:5672"
+  "ConnectionStrings": {
+    "UserContext": "Server=localhost;Database=stries-user-db-local;User Id=sa;Password=stries_2021;"
+  },
+    "MessageBrokerSettings": {
+      "Url": "amqp://guest:guest@rabbitmq:5672"
+    }
   }
-}
