--- a/src/Services/Post/appsettings.Development.json
+++ b/src/Services/Post/appsettings.Development.json
@@ -6,6 +6,9 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "ConnectionStrings": {
+    "PostContext": "Host=localhost:5434;Database=stries-post-db-local;Username=admin;Password=stries_2021"
+  },
   "MessageBrokerSettings": {
     "Url": "amqp://guest:guest@rabbitmq:5672"
   }
