--- a/src/Services/User/User.csproj
+++ b/src/Services/User/User.csproj
@@ -23,6 +23,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Application\Models\" />
     <Folder Include="Repositories\" />
   </ItemGroup>
 
