Remove SQL Server, Add Postgres to User Service

--- a/src/Services/User/appsettings.Development.json
+++ b/src/Services/User/appsettings.Development.json
@@ -7,7 +7,7 @@
     }
   },
   "ConnectionStrings": {
-    "UserContext": "Server=localhost;Database=stries-user-db-local;User Id=sa;Password=stries_2021;"
+    "UserContext": "Host=localhost;Port=5432;Database=stries-user-db-local;Username=admin;Password=stries_2021"
   },
   "MessageBrokerSettings": {
     "Url": "amqp://guest:guest@rabbitmq:5672"
