--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -6,11 +6,7 @@ services:
     image: rabbitmq:3-management-alpine
     container_name: RabbitMQ
 
-  sqldata:
-    image: mcr.microsoft.com/mssql/server:2019-latest
-    container_name: SQLServer
-
-  nosqldata:
+  postgres:
     image: postgres:latest
     container_name: Postgres
 
@@ -30,7 +26,7 @@ services:
       dockerfile: Services/Post/Dockerfile
     depends_on:
       - rabbitmq
-      - nosqldata
+      - postgres
 
   user:
     image: ${DOCKER_REGISTRY-}user
@@ -39,4 +35,4 @@ services:
       dockerfile: Services/User/Dockerfile
     depends_on:
       - rabbitmq
-      - sqldata
+      - postgres
