--- a/src/docker-compose.override.yml
+++ b/src/docker-compose.override.yml
@@ -14,6 +14,7 @@ services:
     ports:
       - "15672:15672"
       - "5672:5672"
+    restart: unless-stopped
 
   web.apigateway:
     environment:
