Add database seed logic and entities

--- a/src/Services/Post/Post.Api/appsettings.Development.json
+++ b/src/Services/Post/Post.Api/appsettings.Development.json
@@ -7,7 +7,7 @@
     }
   },
   "ConnectionStrings": {
-    "PostContext": "Host=localhost;Port=5432;Database=stries-post-db-local;Username=admin;Password=stries_2021"
+    "PostContext": "Host=postgres;Port=5432;Database=stries-post-db-local;Username=admin;Password=stries_2021"
   },
   "MessageBrokerSettings": {
     "Url": "amqp://guest:guest@rabbitmq:5672"
