Add search companies endpoint and logic

--- a/src/Services/Financial/Financial.Api/appsettings.Development.json
+++ b/src/Services/Financial/Financial.Api/appsettings.Development.json
@@ -6,7 +6,10 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "MessageBrokerSettings": {
-    "Url": "amqp://guest:guest@rabbitmq:5672"
+  "RapidApiClient": {
+    "Key": "95e9d46de8mshcdec4dc8f6374b3p111226jsnefb3dac81c80",
+    "Host": "apidojo-yahoo-finance-v1.p.rapidapi.com",
+    "AutoCompleteUrl": "https://apidojo-yahoo-finance-v1.p.rapidapi.com/auto-complete?q={0}&region=IT",
+    "GetSummaryUrl": "https://apidojo-yahoo-finance-v1.p.rapidapi.com/stock/v2/get-summary?symbol={0}&region=IT"
   }
 }
